[package]
name = "tudu"
description = "A cross-platform CLI to-do checklist app."
version = "0.0.1"
edition = "2021"
authors = ["Gabriel Kenneth L. Marinas <gabrielkennethmarinas@gmail.com>"]
keywords = ["productivity", "cli", "tui", "todo"]
repository = "https://github.com/marshblocker/tudu"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.0"
